Thu May  9 11:30:02 2013  Zachary Scott	 <zachary@zacharyscott.net>

	* string.c: Add call-seq alias for String#=== [Bug #8381]

Thu May  9 11:14:18 2013  Zachary Scott	 <zachary@zacharyscott.net>

	* doc/contributing.rdoc: Add guide for contributing to CRuby

Thu May  9 04:55:49 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Check socket library again.  shutdown() is used in
	  io.c.

Thu May  9 01:52:31 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Don't check socketpair.  socketpair is not used in
	  ruby command itself.

Thu May  9 01:05:41 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_mod_included_modules): should not include non-modules.
	  [ruby-core:53158] [Bug #8025]

Wed May  8 22:46:59 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_mod_included_modules): should not include the original
	  module itself.  [ruby-core:53158] [Bug #8025]

Wed May  8 17:43:55 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_io_ext_int_to_encs): ignore internal encoding if external
	  encoding is ASCII-8BIT. [Bug #8342]

Wed May  8 13:49:38 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json/generator/generator.c (isArrayOrObject): cast char to
	  unsigned char. [Bug #8378]

Wed May  8 13:46:10 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json/generator/depend: fix dependencies [Bug #8379]

	* ext/json/parser/depend: ditto.

Wed May  8 13:07:17 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): fail if $, @, @@ are not followed by a valid
	  name character.  [ruby-core:54846] [Bug #8375].

Wed May  8 13:06:31 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (ISGRAPH): add missing macro.

Wed May  8 06:42:56 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/socket/socket.c (socket_s_ip_address_list): fix wrongly filled
	  sin6_scope_id on KAME introduced by r40593 for OpenIndiana.
	  KAME uses fe80:<scope_id>::<interface id> for link-local address
	  internally.